--- a/exercises/hw04/hw04.ipynb
+++ b/exercises/hw04/hw04.ipynb
@@ -93,20 +93,21 @@
     "    X_val, y_val = X_train[val_mask], y_train[val_mask]\n",
     "    X_trn, y_trn = X_train[~val_mask], y_train[~val_mask]\n",
     "    \n",
-    "    # fit the classifier\n",
+    "    # Tips: fit the classifier (see the former example)\n",
     "    \n",
-    "    # compute the score and record it\n",
+    "    # Tips: compute the score and record it\n",
     "    score = \n",
     "    scores.append(score)\n",
     "    models.append(reg)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c2927d30",
    "metadata": {},
    "source": [
-    "1. Use the k models to predict the value of $y_{test}$ respectively, and calculate the score"
+    "1. Use the k models to predict the value of $y_{test}$ respectively, and calculate the mean score"
    ]
   },
   {
@@ -121,12 +122,13 @@
     "\n",
     "for fold in range(k):\n",
     "    reg = models[fold]\n",
+    "    # Tips: get the scores and predictions (see the former examples)\n",
     "    score_test =\n",
     "    y_pred = \n",
     "    score_tests.append(score_test)\n",
     "    y_preds.append(y_pred)\n",
     "    \n",
-    "# calculate the mean score\n",
+    "# Tips: calculate the mean score\n",
     "score = \n",
     "print('Mean score of the {} model is : {}'.format(k, score))"
    ]
@@ -147,7 +149,7 @@
    "outputs": [],
    "source": [
     "y_preds = np.stack(y_preds, axis=0)\n",
-    "# calculate the mean prediction value\n",
+    "# Tips: calculate the mean prediction value\n",
     "y_pred = \n",
     "\n",
     "from sklearn.metrics import r2_score\n",
@@ -156,11 +158,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "48384a6d",
    "metadata": {},
    "source": [
-    "#### Question: Which score is correct? Why?"
+    "#### Question: There are two scores: (1) mean of the scores and (2) score of the mean prediction. Which score is correct? Why?"
    ]
   },
   {
@@ -182,7 +185,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -196,7 +199,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.7.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "d8a9911dd55824de2b9148872b09f5aa97429f0d8598f0eb95e15d199cda6b48"
+   }
   }
  },
  "nbformat": 4,
