--- a/exercises/hw03/hw03.ipynb
+++ b/exercises/hw03/hw03.ipynb
@@ -243,7 +243,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -257,7 +257,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.7.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "d8a9911dd55824de2b9148872b09f5aa97429f0d8598f0eb95e15d199cda6b48"
+   }
   }
  },
  "nbformat": 4,
