--- a/exercises/hw05/hw05.ipynb
+++ b/exercises/hw05/hw05.ipynb
@@ -274,13 +274,7 @@
     "\n",
     "### Initializing Model Parameters\n",
     "\n",
-    "We will use MNIST dataset (handwritten numbers), which contains 10 classes.\n",
-    "Each image consists of a $28 \\times 28 = 784$\n",
-    "grid of grayscale pixel values.\n",
-    "As before we will disregard the spatial structure\n",
-    "among the pixels for now,\n",
-    "so we can think of this as a classification dataset\n",
-    "with 784 input features and 10 classes.\n",
+    "We will use iris dataset from sklearn.\n",
     "To begin, we will [**implement an MLP\n",
     "with one hidden layer and 256 hidden units.**]\n",
     "Both the number of layers and their width are adjustable\n",
