--- a/exercises/hw06/hw06.ipynb
+++ b/exercises/hw06/hw06.ipynb
@@ -159,7 +159,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Tips: try to plot fig with lr = 0.05\n",
+    "# Tips: try to plot fig with lr = 0.05 by using show_trace()\n",
     "pass"
    ]
   },
@@ -179,7 +179,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Tips: try to plot fig with lr = 1.1\n",
+    "# Tips: try to plot fig with lr = 1.1 by using show_trace()\n",
     "pass"
    ]
   },
@@ -210,7 +210,7 @@
     "    # Tips: try to compute the gradient\n",
     "    pass\n",
     "\n",
-    "# Tips: try to plot fig with learning rate = 2\n",
+    "# Tips: try to plot fig with learning rate = 2 by using show_trace()\n",
     "pass"
    ]
   },
@@ -330,7 +330,7 @@
     "eta = 0.1\n",
     "lr = 1.0  # Constant learning rate\n",
     "\n",
-    "# Tips: try to plot the training trace with steps=50"
+    "# Tips: try to plot the training trace with steps=50 by using show_trace_2d function"
    ]
   }
  ],
